[gd_scene load_steps=6 format=3 uid="uid://mqy6u8kyumo6"]

[ext_resource type="Script" uid="uid://cibmpbeturpqk" path="res://main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://vco48qus0oy0" path="res://scenes/dragon.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://b7aghcwevv3mr" path="res://scenes/mob.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://buvxgstxs1cu0" path="res://scenes/hud.tscn" id="4_jyhfs"]

[sub_resource type="Curve2D" id="Curve2D_jyhfs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")
mob_scene = ExtResource("3_sugp2")

[node name="Dragon" parent="." instance=ExtResource("2_sugp2")]

[node name="HUD" parent="." instance=ExtResource("4_jyhfs")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(640, 360)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_jyhfs")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
